Fixed cropping

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,1 +1,1 @@
-@media (max-width: 700px){.logo{width:112.5px}nav .icon{display:none}}
+@media (max-width: 700px){.logo{width:75px}nav .icon{display:none}}
